--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,25 @@
 language: go
+
 go:
     - 1.2
     - 1.3
     - 1.4
     - 1.5
+    - 1.6
+    - 1.7
+    - 1.8
+    - 1.9
     - tip
+
+matrix:
+  allow_failures:
+    - go: tip
+    - go: 1.9
+
 install:
-    - go list -f '{{range .Imports}}{{.}} {{end}}' ./... | xargs go get -v
-    - go list -f '{{range .TestImports}}{{.}} {{end}}' ./... | xargs go get -v
-    - go get golang.org/x/tools/cmd/cover
-    - go build -v ./...
+    - source env.sh
+    - go get -u github.com/golang/dep
+    - dep ensure
+
 script:
     - go test -v -cover ./...
