--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ matrix:
 
 install:
     - source env.sh
-    - go get -u github.com/golang/dep
+    - go get -u github.com/golang/dep/cmd/dep
     - dep ensure
 
 script:
