--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
 
 install:
     - source env.sh
-    # - go get -u github.com/golang/dep/cmd/dep && dep ensure
+    - go get -u github.com/golang/dep/cmd/dep && dep ensure
 
 script:
     - go test -v $(go list ./... | grep -v /vendor/)
