--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
 
 install:
     - source .envrc
-    - go get -u github.com/golang/dep/cmd/dep && dep ensure
+    - cd $GOPATH/src/github.com/EscherAuth/escher && go get -u github.com/golang/dep/cmd/dep && dep ensure
 
 script:
     - go test -v $(go list ./... | grep -v /vendor/)
