--- a/.envrc
+++ b/.envrc
@@ -1,16 +1,16 @@
 if [ "$ESCHER_TEST_CASES_PATH" == "" ]; then
 
+    testCaseRepoCloneDirectory=$PWD
     testCaseDirectoryPath=$(go env GOPATH)"/src/github.com/EscherAuth/test-cases"
 
     if [ ! -d "$testCaseDirectoryPath" ]; then
-        git clone "https://github.com/EscherAuth/test-cases" $testCasesDirectoryName
+        git clone "https://github.com/EscherAuth/test-cases" $testCaseDirectoryPath
     fi
 
-    cd $testCasesDirectoryName
+    cd $testCaseDirectoryPath
     git checkout -- .
     git pull
-    cd $testCaseRepoCloneDirector
+    cd $testCaseRepoCloneDirectory
 
     export ESCHER_TEST_CASES_PATH="$testCaseDirectoryPath"
-
 fi
