--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,6 +30,6 @@ jobs:
       - name: Install & Test
         run: |
           
-          go test -v -cover ./... 
+          go test -v -cover escher_test.go
         env:
           GOPATH: /home/runner/work
