--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Install & Test
         run: |
           go list -f '{{range .TestImports}}{{.}} {{end}}' ./... | xargs go get -v
+          go get golang.org/x/tools/cmd/cover
           go test -v -cover escher_test.go
         env:
-          GOPATH: /home/runner/work
+          GOPATH: /home/runner/work/test/test
