--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,13 +27,14 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
       
-      - name: Install & Test
+      - name: Install
         run: |
           go mod init github.com/emartech/escher-go
           go list -f '{{range .Imports}}{{.}} {{end}}' ./... | xargs go get -v
           go list -f '{{range .TestImports}}{{.}} {{end}}' ./... | xargs go get -v
           go get golang.org/x/tools/cmd/cover
           go build ./...
-          go test -v -cover escher_test.go
         env:
           GOPATH: /home/runner/work/go
+      - name: Test
+        run: go test -v -cover escher_test.go
