--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,4 +37,4 @@ jobs:
         env:
           GOPATH: /home/runner/work/go
       - name: Test
-        run: go test -v -cover escher_test.go
+        run: go test -v -cover ./...
