--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,10 +12,10 @@ jobs:
     strategy:
       matrix:
         go: [ 
-          '1.2', 
+          # '1.2', 
           # '1.3', 
-          # '1.4', 
-          # '1.16' 
+          '1.15', 
+          '1.16' 
         ]
 
     name: Go ${{ matrix.go }} sample
@@ -29,7 +29,7 @@ jobs:
       
       - name: Install
         run: |
-          
+          go mod init github.com/emartech/escher-go
           go list -f '{{range .Imports}}{{.}} {{end}}' ./... | xargs go get -v
           go list -f '{{range .TestImports}}{{.}} {{end}}' ./... | xargs go get -v
           go get golang.org/x/tools/cmd/cover
