--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,13 +29,11 @@ jobs:
       
       - name: Install
         run: |
-          
+          go mod init emartech/escher-go
           go list -f '{{range .Imports}}{{.}} {{end}}' ./... | xargs go get -v
           go list -f '{{range .TestImports}}{{.}} {{end}}' ./... | xargs go get -v
           go get golang.org/x/tools/cmd/cover
           go build ./...
       
       - name: Test
-        run: |
-          go mod init emartech/escher-go
-          go test -v -cover ./...
+        run: go test -v -cover ./...
