--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,7 +18,7 @@ jobs:
           '1.16'
         ]
 
-    name: Go ${{ matrix.go }} sample
+    name: Go ${{ matrix.go }}
     steps:
       - uses: actions/checkout@v2
 
