--- a/Dockerfile.codescan
+++ b/Dockerfile.codescan
@@ -1,10 +1,7 @@
 FROM golang:1.16.0
 
-COPY install.sh /tmp/
-RUN chmod 755 /tmp/install.sh
-
 ENV GOPATH=/workspace/source/dependencies
 
 WORKDIR /workspace/source
 
-ENTRYPOINT ["/tmp/install.sh"]
+ENTRYPOINT ["go", "get"]
